# odysseus

./: .gitignore  .gitmodules  README.md  REAMDE.md  devenv  flake.nix  pyproject.toml  setup.py  shell.nix  test.sh
examples/: leg.py  rrbot_model.py  rrbot_nmpc.py  urdf_computed_torque.py  visualize_urdf.py
odysseus/: __init__.py  generate_nmpc.py  link_model.py  link_model_simplify.py  save.py  simplify.py  sym_util.py  symengine2casadi.py  urdf.py  visit.py
odysseus/examples/: inject_metadata.py  model_from_args.py  urdf_computed_torque.py  urdf_nmpc.py
odysseus/test/: rrbot.py  test_link_model.py  test_link_model_rrbot.py  test_simplify_multi.py  test_transform.py  test_urdf.py  util.py
